# fhir-zeug

./: .flake8  .gitignore  README.md  pydantic_gen_and_test.sh  pyproject.toml  r4.py
.github/workflows/: main.yml
fhirzeug/: cli.py  fhirclass.py  fhirrenderer.py  fhirspec.py  generator.py  logger.py  specificationcache.py
fhirzeug/generators/: __init__.py  yaml_model.py
fhirzeug/generators/default/: generator.yaml  mappings.py  settings.py
fhirzeug/generators/python/: settings.py
fhirzeug/generators/python_pydantic/: generator.yaml  settings.py
fhirzeug/generators/python_pydantic/static_files/: README.md  pyproject.toml
fhirzeug/generators/python_pydantic/static_files/tests/: conftest.py  test_base_resource.py  test_enums.py  test_extension.py  test_import_examples.py  test_meta_information.py  test_object_stripping.py  test_reference.py
fhirzeug/generators/python_pydantic/static_files/tests/test_examples/: test_basic.py  test_import_examples.py
fhirzeug/generators/python_pydantic/templates/: codesystems.py.jinja2  fhir_basic_types.py  fhirabstractbase.py  fhirabstractresource.py  fhirdate.py  resource.py.jinja2  resource_custom_validators.py  resource_footer.py  resource_header.py  (+1 more)
tests/: conftest.py  test_choice_of_datatypes.py  test_enums.py  test_fhirspec.py  test_generator.py  test_jinja_custom_filters.py  test_logger.py
tests/pydantic/: test_alias_generator.py  test_basic_types_pyd.py  test_choice_of_datatypes.py  test_choice_of_datatypes_pyd.py  test_dynamic_validator.py  test_enums_descriptions.py  test_fhir_base.py  test_json_serialization.py  test_load_config.py  test_nullability.py  test_object_stripping.py  test_primitive_list.py  test_reference_validator.py
