[tool.poetry]
name = "pydantic-fhir"
version = "0.0.1-alpha"
description = "Generated FHIR model for Pydantic."
authors = ["Skalar Systems <contact@skalarsystems.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.6"
pydantic = "^1.5.1"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
mypy = "^0.770"
flake8-bugbear = "^20.1.4"
pytest = "^5.4.1"
pytest-xdist = "^1.32.0"
pytest-cov = "^2.8.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

